--- a/大数据/物联网.md
+++ b/大数据/物联网.md
@@ -1,6 +1,53 @@
 ## 物联网
 
-- #### 分类
+- #### 物联网协议
+
+  > MQTT/MQTT-SN：
+  >
+  > - | 特性     | MQTT                     | MQTT-SN                      |
+  >   | :------- | ------------------------ | ---------------------------- |
+  >   | 网络环境 | TCP/IP 网络              | 低带宽、高延迟网络           |
+  >   | 资源消耗 | 相对较高                 | 非常低                       |
+  >   | 消息传输 | TCP, 可靠，有 QoS        | UDP 或其他，可靠性机制自实现 |
+  >   | 可靠性   | 通过 TCP 保证            | 通过自身机制保证             |
+  >   | 应用场景 | 稳定网络连接的物联网应用 | 资源受限的物联网应用         |
+  >   | 复杂性   | 相对复杂                 | 相对简单                     |
+  >   | 网络协议 | TCP                      | UDP 或其他低功耗网络协议     |
+  >
+  > CoAP：
+  >
+  > - | 特性     | CoAP                   | HTTP            |
+  >   | -------- | ---------------------- | --------------- |
+  >   | 传输协议 | UDP                    | TCP             |
+  >   | 连接     | 无连接                 | 面向连接        |
+  >   | 报文大小 | 小                     | 相对较大        |
+  >   | 开销     | 低                     | 高              |
+  >   | 延迟     | 低                     | 高              |
+  >   | 可靠性   | 可选的可靠性机制       | 内置可靠性机制  |
+  >   | 资源模型 | 基于资源的模型         | 基于 URI 的模型 |
+  >   | 应用场景 | 受限环境（物联网设备） | 通用网络应用    |
+  >
+  > LwM2M：在CoAP基础上提供设备发现，资源读写及固件更新功能
+  >
+  > LoRaWAN：定义了如何在LoRa无线电网络上传输数据包。（专注于长距离、低功耗、低数据速率的应用）
+  >
+  > NB-IoT（LPWAN）：
+  >
+  > - | 特性       | LoRaWAN                | NB-IoT                       |
+  >   | ---------- | ---------------------- | ---------------------------- |
+  >   | 技术       | 扩频技术，非授权频谱   | 蜂窝网络技术，授权频谱       |
+  >   | 网络架构   | 星型网络               | 蜂窝网络                     |
+  >   | 覆盖范围   | 非常广 (10km+)         | 较广 (几公里)                |
+  >   | 功耗       | 极低                   | 低                           |
+  >   | 数据速率   | 较低 (kbps)            | 较高 (kbps-数百kbps)         |
+  >   | 成本       | 设备和部署成本相对较低 | 设备和部署成本相对较高       |
+  >   | 安全性     | 可靠，但取决于具体实现 | 高，受益于蜂窝网络安全机制   |
+  >   | 部署复杂度 | 相对容易               | 相对复杂                     |
+  >   | 适用场景   | 长距离、低功耗应用     | 较高数据速率和可靠性要求应用 |
+  >
+  > 
+  
+- #### 物联网应用
 
   > **医疗保健:**
   >
