--- a/大数据/物联网.md
+++ b/大数据/物联网.md
@@ -14,6 +14,23 @@
   >   | 复杂性   | 相对复杂                 | 相对简单                     |
   >   | 网络协议 | TCP                      | UDP 或其他低功耗网络协议     |
   >
+  >   MQTT协议数据包类型
+  >
+  >   1. **CONNECT (连接):** 客户端用于连接到服务器。包含客户端标识符、协议版本、连接标志（例如，遗嘱消息、清洁会话等）以及可选的用户名和密码。
+  >   2. **CONNACK (连接确认):** 服务器对CONNECT请求的响应。指示连接是否成功，以及会话是否被清洁。
+  >   3. **PUBLISH (发布):** 用于发布消息到主题。包含主题名称、QoS级别（服务质量）、保留标志（是否保留最后一条消息）、消息ID（对于QoS 1和2）以及消息有效负载。
+  >   4. **PUBACK (发布确认):** 服务器对QoS 1消息的PUBLISH请求的确认。
+  >   5. **PUBREC (发布接收):** 服务器对QoS 2消息的PUBLISH请求的接收确认。
+  >   6. **PUBREL (发布释放):** 客户端对PUBREC的响应。
+  >   7. **PUBCOMP (发布完成):** 服务器对PUBREL的响应，表示QoS 2消息的发布完成。
+  >   8. **SUBSCRIBE (订阅):** 客户端用于订阅一个或多个主题。包含主题过滤器和QoS级别。
+  >   9. **SUBACK (订阅确认):** 服务器对SUBSCRIBE请求的响应。包含每个主题过滤器的QoS级别。
+  >   10. **UNSUBSCRIBE (取消订阅):** 客户端用于取消订阅一个或多个主题。
+  >   11. **UNSUBACK (取消订阅确认):** 服务器对UNSUBSCRIBE请求的响应。
+  >   12. **PINGREQ (心跳请求):** 客户端发送心跳请求以保持连接。
+  >   13. **PINGRESP (心跳响应):** 服务器对PINGREQ请求的响应。
+  >   14. **DISCONNECT (断开连接):** 客户端用于断开与服务器的连接。
+  >
   > CoAP：
   >
   > - | 特性     | CoAP                   | HTTP            |
