大数据&物联网&人工智能

--- a/人工智能&大数据&物联网/物联网.md
+++ b/人工智能&大数据&物联网/物联网.md
@@ -1,5 +1,56 @@
 ## 物联网
 
+- #### **嵌入式技术**
+
+  > **嵌入式系统**：
+  >
+  > 1. **单片机（MCU）**
+  >
+  > 2. **嵌入式Linux**
+  >
+  >    | 特性       | 单片机                           | 嵌入式Linux                      |
+  >    | ---------- | -------------------------------- | -------------------------------- |
+  >    | 处理器     | 单核，资源受限                   | 多核可选，资源相对丰富           |
+  >    | 操作系统   | 无或简单的RTOS                   | 完整的Linux操作系统              |
+  >    | 内存/存储  | 几KB到几MB                       | 几MB到几GB                       |
+  >    | 处理能力   | 低                               | 高                               |
+  >    | 实时性     | 高                               | 相对较低 (可通过实时扩展提高)    |
+  >    | 功耗       | 低                               | 相对较高                         |
+  >    | 应用场景   | 简单控制，传感器节点，低功耗设备 | 复杂应用，网络设备，图形界面应用 |
+  >    | 开发复杂度 | 低                               | 高                               |
+  >    | 成本       | 低                               | 高                               |
+  >    | 编程语言   | 主要C语言                        | C、C++、Python等多种语言         |
+  >
+  > 
+  >
+  > **指令集**：
+  >
+  > 1. **x86/x64:** 应用于高性能计算，服务器，PC
+  > 2. **ARM:** 移动设备、嵌入式系统，服务器，可穿戴设备
+  > 3. **RISC-V**：物联网，嵌入式系统
+  > 4. **PowerPC**：嵌入式系统，
+  > 5. **MIPS:** 应用于嵌入式系统的指令集架构。
+  >
+  > 
+  >
+  > 基于ARM指令的CPU架构
+  >
+  > - **Cortex系列：** Arm 公司研发的Cortex系列处理器架构
+  >
+  >   - **Cortex-M**：针对微控制器应用，强调低功耗、成本效益和实时性能（传感器，物联网）
+  >
+  >   - **Cortex-R**：针对实时应用，强调高性能和确定性（汽车，工业控制）
+  >
+  >   - **Cortex-A**：针对应用处理器，强调高性能和多功能性（手机，平板，电脑）
+  > - 
+  >
+  > 
+  >
+  > 
+  >
+  > 
+  >
+  
 - #### 物联网协议
 
   > MQTT/MQTT-SN：
@@ -62,7 +113,6 @@
   >   | 部署复杂度 | 相对容易               | 相对复杂                     |
   >   | 适用场景   | 长距离、低功耗应用     | 较高数据速率和可靠性要求应用 |
   >
-  > 
   
 - #### 物联网应用
 
@@ -160,11 +210,13 @@
   > - **无线通信协议**
   >
   >   - **WirelessHART:** 基于HART协议的无线通信协议，用于过程自动化领域。
-  >   - **Zigbee:** 低功耗无线通信协议，常用于传感器网络。
-  >   - **WPAN**：低功耗蓝牙
+  >   - **WPAN**：无线个人局域网
+  >     1. **Zigbee:** 低功耗无线通信协议，常用于传感器网络。
+  >     2. 蓝牙
+  >     3. WIFI
   >   - **RFID**：射频识别技术
   >   - **LTE**：蜂窝网络
-  >
+  >   - **NB-IOT**
   > - **其他**
   >
   >   - **OPC UA (OLE for Process Control Unified Architecture):** OPC UA是工业设备和系统间互通的平台无关标准，支持多种通信协议。
@@ -194,7 +246,7 @@
   >
   > - **处理大量数据:** 许多物联网应用会产生大量数据，边缘计算可以帮助分担云端的处理负担。
   >
-  >  
+  > 
   >
   > AIOT：**人工智能与物联网的融合**。它结合了人工智能（AI）的分析能力和物联网（IoT）的连接能力，创造出更智能、更自动化、更有效的系统。 人工智能（AI）旨在模拟人类思维，创造出能像人类一样反应的智能应用。其研究涵盖机器人、语言识别、图像识别等多个领域。机器学习是人工智能的一种实现方法，通过算法分析数据，学习并预测真实世界事件。它利用大量数据训练模型，而非硬编码程序，常见的算法包括决策树、聚类等。深度学习是机器学习的子集，它模拟人脑神经网络结构进行学习，在计算机视觉和自然语言处理等领域表现突出，是目前最热门的机器学习方法。 深度学习通过数据输入和反复训练，优化模型参数以实现泛化能力。
   >
@@ -210,7 +262,7 @@
   >
   > **工业自动化：**工业自动化利用技术控制和自动化工业流程，提升效率、质量和安全，同时降低成本和人力需求。核心技术包括：可编程逻辑控制器(PLC)、工业机器人、传感器和执行器、人机界面(HMI)、工业网络(如以太网/IP)、工业互联网(IIoT)、CAD/CAM、工业视觉系统、运动控制系统及伺服/步进电机。
   >
-  >   
+  > 
   >
   > **云计算：**
   >
@@ -224,7 +276,7 @@
   >
   > 云计算（分布式计算）：分布式系统中**自治性、可管理性**以及**面向服务架构 (SOA)** 。 自治性强调服务内部运行的独立性，而可管理性则关注服务的协调管理。 为了简化复杂的进程间通信 (如基于 Socket 的通信)，RPC 框架应运而生，它隐藏了底层网络细节，使远程服务调用如同本地调用一样简单。 SOA 则是一种将系统分解为独立、松耦合服务的架构风格，服务间通过定义良好的接口通信，并强调服务自治。 SOA 通过 SOAP 或 RESTful HTTP 服务实现，两者都基于 RPC 的思想，并利用 XML 或 HTTP 等协议进行消息交换。 SOA 的主要优势在于其灵活性、可扩展性和可重用性，使其能够更好地适应变化的业务需求。
   >
-  >  
+  > 
   >
   > **工业物联网平台**：
   >
@@ -242,5 +294,5 @@
   >
   > - 规则引擎：自动化决策和操作，它允许设备在本地处理数据并根据预定义的规则采取行动
   >
-  >   
+  > 
 
